// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with Global Search alert & no message 1`] = `
<body>
  <div>
    <section
      class="pf-v6-c-page__main-section pf-m-no-padding pf-m-sticky-top"
      id="page-header"
    >
      <div
        class="pf-v6-l-split"
      >
        <div
          class="pf-v6-l-split__item pf-m-fill"
        >
          <div
            class="pf-v6-l-stack pf-m-gutter"
          >
            <div
              class="pf-v6-l-stack__item pf-m-fill"
            >
              <section
                class="pf-v6-c-page__main-section"
              >
                <div
                  class="pf-v6-l-stack pf-m-gutter"
                >
                  <div
                    class="pf-v6-l-stack__item pf-m-fill"
                  >
                    <div
                      class="pf-v6-l-split pf-m-gutter"
                    >
                      <div
                        class="pf-v6-l-split__item"
                      >
                        <div
                          class="pf-v6-c-content"
                          data-ouia-component-id="OUIA-Generated-Content-:r6:"
                          data-ouia-component-type="PF6/Content"
                          data-ouia-safe="true"
                          data-pf-content="true"
                        >
                          <h1
                            class="pf-v6-c-title pf-m-h1"
                            data-ouia-component-id="OUIA-Generated-Title-:r7:"
                            data-ouia-component-type="PF6/Title"
                            data-ouia-safe="true"
                          >
                            Global search
                            <div
                              style="display: contents;"
                            >
                              <button
                                class="pf-v6-c-button pf-m-plain"
                                data-ouia-component-id="OUIA-Generated-Button-plain-:r9:"
                                data-ouia-component-type="PF6/Button"
                                data-ouia-safe="true"
                                style="padding: 0px; margin-left: 8px; vertical-align: middle;"
                                type="button"
                              >
                                <span
                                  class="pf-v6-c-button__icon"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="pf-v6-svg"
                                    fill="currentColor"
                                    height="1em"
                                    role="img"
                                    width="1em"
                                  >
                                    <svg
                                      class="pf-v6-icon-default"
                                      viewBox="0 0 512 512"
                                    >
                                      <path
                                        d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
                                      />
                                    </svg>
                                    <svg
                                      class="pf-v6-icon-rh-ui"
                                      viewBox="0 0 32 32"
                                    >
                                      <path
                                        d="M16 1C7.729 1 1 7.729 1 16s6.729 15 15 15 15-6.729 15-15S24.271 1 16 1Zm0 28C8.832 29 3 23.168 3 16S8.832 3 16 3s13 5.832 13 13-5.832 13-13 13Zm5-17a5.008 5.008 0 0 1-4 4.899V19a1 1 0 0 1-2 0v-3a1 1 0 0 1 1-1c1.654 0 3-1.346 3-3s-1.346-3-3-3-3 1.346-3 3a1 1 0 0 1-2 0c0-2.757 2.243-5 5-5s5 2.243 5 5Zm-3.25 12a1.75 1.75 0 1 1-3.501-.001A1.75 1.75 0 0 1 17.75 24Z"
                                      />
                                    </svg>
                                  </svg>
                                </span>
                              </button>
                            </div>
                          </h1>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </section>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`renders with search disabled message 1`] = `
<body>
  <div>
    <section
      class="pf-v6-c-page__main-section pf-m-no-padding pf-m-sticky-top"
      id="page-header"
    >
      <div
        class="pf-v6-l-split"
      >
        <div
          class="pf-v6-l-split__item pf-m-fill"
        >
          <div
            class="pf-v6-l-stack pf-m-gutter"
          >
            <div
              class="pf-v6-l-stack__item pf-m-fill"
            >
              <section
                class="pf-v6-c-page__main-section"
              >
                <div
                  class="pf-v6-l-stack pf-m-gutter"
                >
                  <div
                    class="pf-v6-l-stack__item pf-m-fill"
                  >
                    <div
                      class="pf-v6-l-split pf-m-gutter"
                    >
                      <div
                        class="pf-v6-l-split__item"
                      >
                        <div
                          class="pf-v6-c-content"
                          data-ouia-component-id="OUIA-Generated-Content-:r2:"
                          data-ouia-component-type="PF6/Content"
                          data-ouia-safe="true"
                          data-pf-content="true"
                        >
                          <h1
                            class="pf-v6-c-title pf-m-h1"
                            data-ouia-component-id="OUIA-Generated-Title-:r3:"
                            data-ouia-component-type="PF6/Title"
                            data-ouia-safe="true"
                          >
                            Search
                          </h1>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </section>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`renders without search disabled message 1`] = `
<body>
  <div>
    <section
      class="pf-v6-c-page__main-section pf-m-no-padding pf-m-sticky-top"
      id="page-header"
    >
      <div
        class="pf-v6-l-split"
      >
        <div
          class="pf-v6-l-split__item pf-m-fill"
        >
          <div
            class="pf-v6-l-stack pf-m-gutter"
          >
            <div
              class="pf-v6-l-stack__item pf-m-fill"
            >
              <section
                class="pf-v6-c-page__main-section"
              >
                <div
                  class="pf-v6-l-stack pf-m-gutter"
                >
                  <div
                    class="pf-v6-l-stack__item pf-m-fill"
                  >
                    <div
                      class="pf-v6-l-split pf-m-gutter"
                    >
                      <div
                        class="pf-v6-l-split__item"
                      >
                        <div
                          class="pf-v6-c-content"
                          data-ouia-component-id="OUIA-Generated-Content-:r0:"
                          data-ouia-component-type="PF6/Content"
                          data-ouia-safe="true"
                          data-pf-content="true"
                        >
                          <h1
                            class="pf-v6-c-title pf-m-h1"
                            data-ouia-component-id="OUIA-Generated-Title-:r1:"
                            data-ouia-component-type="PF6/Title"
                            data-ouia-safe="true"
                          >
                            Search
                          </h1>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </section>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;
